force-app/main/default/objects/OrderLineItem__c/fields/AmountCopy__c.field-meta.xml
<CustomField>
    <fullName>AmountCopy__c</fullName>
    <label>AmountCopy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>