force-app/main/default/objects/OrderLineItem__c/fields/MyOrder__c.field-meta.xml
<CustomField>
    <fullName>MyOrder__c</fullName>
    <label>MyOrder</label>
    <referenceTo>MyOrder__c</referenceTo>
    <relationshipLabel>OrderLineItems</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>