force-app/main/default/objects/OrderLineItem__c/fields/MyProduct__c.field-meta.xml
<CustomField>
    <fullName>MyProduct__c</fullName>
    <label>MyProduct</label>
    <referenceTo>MyProduct__c</referenceTo>
    <relationshipLabel>OrderLineItems</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>