force-app/main/default/objects/OrderLineItem__c/fields/OrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>OrderQuantity__c</fullName>
    <label>OrderQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>