force-app/main/default/objects/OrderLineItem__c/validationRules/OrderQuantity_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderQuantity_rules</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   OrderQuantity__c  &lt;  1,
   OrderQuantity__c  &gt;   MyProduct__r.Stock__c ,
   ISBLANK(OrderQuantity__c )
)</errorConditionFormula>
    <errorDisplayField>OrderQuantity__c</errorDisplayField>
    <errorMessage>Qunatity must be greater than zero 
Qunatity should not be execeed by Selected Product&apos;s Stock</errorMessage>
</ValidationRule>