force-app/main/default/objects/OrderLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MyProduct__c</columns>
    <columns>MyOrder__c</columns>
    <columns>OrderQuantity__c</columns>
    <columns>Amount__c</columns>
    <columns>AmountCopy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>